--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -45,5 +45,5 @@
 <p>
   Du findest mich auch auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a> und kannst dir
   dort meine bisherigen Werke ansehen und mich kontaktieren. Alternativ schreibe mir gerne eine
-  <a href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&commat;kicherkrabbe.com</i>
+  <a href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&commat;kicherkrabbe.com</i> oder nutze das <a routerLink="contact">Kontaktformular</a>.
 </p>
