--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -20,6 +20,8 @@
     --red: #FF4E43;
     --green: #66CC99;
 
+    --link: #8CF2F6;
+
     --primary-1-sub: #AC3F37;
     --primary-1-sub-rgb: 172, 63, 55;
 
@@ -57,6 +59,8 @@
 
     --red: #FF4E43;
     --green: #66CC99;
+
+    --link: #269599;
 
     --primary-1-sub: #FFA59F;
     --primary-1-sub-rgb: 255, 165, 159;
