New products module + Product and counter aggregates

--- a/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.scss
+++ b/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.scss
@@ -97,6 +97,20 @@ table.fabric-composition-table {
     height: auto;
   }
 
+  table.fabric-composition-table {
+    thead {
+      th {
+        padding: 8px 8px;
+      }
+    }
+
+    tbody {
+      td {
+        padding: 8px 8px;
+      }
+    }
+  }
+
   .footer {
     flex-direction: column;
     align-items: stretch;
