Finished products module

--- a/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.html
+++ b/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.html
@@ -29,7 +29,7 @@
             <td class="percentage">
               <input #percentage
                      type="number"
-                     [value]="item.percentage"
+                     [value]="item.percentage / 100"
                      (input)="updatePercentageForItem(index, percentage.valueAsNumber)"
                      min="0"
                      max="100">
