--- a/frontend/src/app/modules/admin/modules/products/pages/product/product.page.html
+++ b/frontend/src/app/modules/admin/modules/products/pages/product/product.page.html
@@ -104,7 +104,7 @@
               @for (item of product.fabricComposition.getSortedByPercentage(); track item.fabricType.internal) {
                 <tr>
                   <td class="fabric-type">{{ item.fabricType.label }}</td>
-                  <td class="percentage">{{ item.percentage }}%</td>
+                  <td class="percentage">{{ item.percentage / 100 }}%</td>
                 </tr>
               }
             </tbody>
