--- a/frontend/src/app/modules/admin/modules/products/pages/create/create.page.html
+++ b/frontend/src/app/modules/admin/modules/products/pages/create/create.page.html
@@ -88,7 +88,7 @@
               @for (item of composition.getSortedByPercentage(); track item.fabricType.internal) {
                 <tr>
                   <td class="fabric-type">{{ item.fabricType.label }}</td>
-                  <td class="percentage">{{ item.percentage }}%</td>
+                  <td class="percentage">{{ item.percentage / 100 }}%</td>
                 </tr>
               }
             </tbody>
