--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -1,16 +1,16 @@
 <div class="banner-container">
   <div class="banner">
-    <img src="/assets/images/banner.jpg" width="100%" />
+    <img src="/assets/images/banner.jpg" width="100%"/>
   </div>
 </div>
 
-<h1>Willkommen bei Kicherkrabbe!</h1>
+<h1>Kicherkrabbe | Handmade Kinderkleidung</h1>
 
 <div class="news">
   <app-note level="info">
     <p>
       <strong>Du willst meine Werke live sehen?</strong>
-      Einige davon sind ganzjährig im Kunsthandwerk Dorfen ausgestellt und werden regelmäßig ausgetauscht!<br />
+      Einige davon sind ganzjährig im Kunsthandwerk Dorfen ausgestellt und werden regelmäßig ausgetauscht!<br/>
       Sollte ich wieder auf einem Markt vertreten sein, findest du hier die Termine zuerst.
     </p>
   </app-note>
@@ -36,14 +36,15 @@
     </p>
   </div>
   <div class="right">
-    <img src="/assets/images/jenny.jpg" width="100%" />
+    <img src="/assets/images/jenny.jpg" width="100%"/>
   </div>
 </div>
 
-<hr />
+<hr/>
 
 <p>
   Du findest mich auch auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a> und kannst dir
   dort meine bisherigen Werke ansehen und mich kontaktieren. Alternativ schreibe mir gerne eine
-  <a href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&commat;kicherkrabbe.com</i> oder nutze das <a routerLink="contact">Kontaktformular</a>.
+  <a href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&commat;kicherkrabbe.com</i> oder nutze das <a
+  routerLink="contact">Kontaktformular</a>.
 </p>
