--- a/sassycrab/src/app/app.html
+++ b/sassycrab/src/app/app.html
@@ -1,4 +1,19 @@
+<app-background></app-background>
 <app-header></app-header>
 <app-highlights></app-highlights>
+<app-crab-helper></app-crab-helper>
+
+<section>
+	<h1>Angebote</h1>
+</section>
+<section>
+	<h1>Schnitte</h1>
+</section>
+<section>
+	<h1>Stoffe</h1>
+</section>
+<section>
+	<h1>Anfrage</h1>
+</section>
 
 <p-button label="Toggle Dark Mode" (onClick)="toggleDarkMode()"/>
