--- a/sassycrab/src/app/highlights/highlights.scss
+++ b/sassycrab/src/app/highlights/highlights.scss
@@ -1,40 +1,59 @@
+:host {
+	display: block;
+	height: 80vh;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 8px;
+}
+
 .highlights-container {
 	display: flex;
 	width: 100%;
-	height: 80vh;
-	gap: 1rem;
-	padding: 1rem;
+	height: 100%;
+	gap: 2rem;
+	padding: 2rem;
 	box-sizing: border-box;
 
 	.left-image {
-		flex: 1;
+		flex: 2;
 		display: flex;
 		overflow: hidden;
-
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			border-radius: 8px;
-		}
 	}
 
 	.right-images {
 		flex: 1;
 		display: flex;
 		flex-direction: column;
-		gap: 1rem;
+		gap: 2rem;
 
 		.top-image,
 		.bottom-image {
 			flex: 1;
 			overflow: hidden;
+		}
+	}
+}
 
-			img {
-				width: 100%;
+@media (max-width: 1280px) {
+	.highlights-container {
+		flex-direction: column;
+
+		.left-image {
+			min-height: 60%;
+		}
+
+		.right-images {
+			flex-direction: row;
+			min-height: 30%;
+
+			.top-image,
+			.bottom-image {
+				flex: 1;
 				height: 100%;
-				object-fit: cover;
-				border-radius: 8px;
 			}
 		}
 	}
