--- a/sassycrab/src/app/app.html
+++ b/sassycrab/src/app/app.html
@@ -1,7 +1,10 @@
 <app-background></app-background>
 <app-header></app-header>
 <app-highlights></app-highlights>
-<app-crab-helper></app-crab-helper>
+<div class="offset-into-highlights">
+	<app-crab-helper></app-crab-helper>
+</div>
+<app-badges></app-badges>
 
 <section>
 	<h1>Angebote</h1>
