--- a/sassycrab/src/app/crab-helper/crab-helper.html
+++ b/sassycrab/src/app/crab-helper/crab-helper.html
@@ -1,1 +1,10 @@
-<img src="images/logo.svg" width="200" />
+<div class="layout">
+	<div class="speech-bubble">
+		<span class="greeting">Hallo!</span>
+		Ich helfe dir gerne weiter, falls du eine Frage hast!
+	</div>
+
+	<div class="crab">
+		<img src="images/logo.svg" width="100%" />
+	</div>
+</div>
