--- a/sassycrab/src/styles.scss
+++ b/sassycrab/src/styles.scss
@@ -8,6 +8,11 @@
 	src: url(/fonts/grandstander/Grandstander-VariableFont_wght.ttf);
 }
 
+@font-face {
+	font-family: Chewy;
+	src: url(/fonts/chewy/Chewy-Regular.ttf);
+}
+
 html {
 	box-sizing: border-box;
 	font-family: Lexend, sans-serif;
