--- a/sassycrab/src/app/app.html
+++ b/sassycrab/src/app/app.html
@@ -8,6 +8,12 @@
 
 <section>
 	<h1>Angebote</h1>
+	<div class="offers-container">
+		<app-offer-card [offer]="exampleA"></app-offer-card>
+		<app-offer-card [offer]="exampleB"></app-offer-card>
+		<app-offer-card [offer]="exampleC"></app-offer-card>
+		<app-offer-card [offer]="exampleD"></app-offer-card>
+	</div>
 </section>
 <section>
 	<h1>Schnitte</h1>
