--- a/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
+++ b/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
@@ -1,11 +1,11 @@
 <p-card [style]="{ width: '100%', height: '100%', overflow: 'hidden' }">
 	<ng-template #header>
-		<img alt="Card" class="offer-image" [src]="offer.image" />
+		<img alt="Schnittmuster" class="pattern-image" [src]="getImageUrl()" />
 	</ng-template>
 	<ng-template #title>
-		{{ offer.title }}
+		{{ pattern.name }}
 	</ng-template>
 	<ng-template #subtitle>
-		{{ offer.price }}, Größe {{ offer.size }}
+		{{ pattern.formatMinPrice() }}
 	</ng-template>
 </p-card>
