--- a/frontend/legacy/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
+++ b/frontend/legacy/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
@@ -53,9 +53,11 @@
         @if (pattern.attribution.hasSome()) {
           <br />
           Basierend auf dem Schnittmuster
-          <span *ngIf="pattern.attribution.originalPatternName.isSome()">
-            &raquo;{{ pattern.attribution.originalPatternName.orElse("") }}&laquo;
-          </span>
+          @if (pattern.attribution.originalPatternName.isSome()) {
+            <span>
+              &raquo;{{ pattern.attribution.originalPatternName.orElse("") }}&laquo;
+            </span>
+          }
           von &raquo;{{ pattern.attribution.designer.orElse("") }}&laquo;.
         }
       </p>
