--- a/frontend/customer/src/app/app.html
+++ b/frontend/customer/src/app/app.html
@@ -1,21 +1,4 @@
 <app-background></app-background>
 <app-header></app-header>
-<app-highlights></app-highlights>
-<div class="offset-into-highlights">
-	<app-crab-helper></app-crab-helper>
-</div>
-<app-badges></app-badges>
-
-<section>
-	<h1>Schnitte</h1>
-	<app-featured-patterns></app-featured-patterns>
-</section>
-<section>
-	<h1>Stoffe</h1>
-	<app-featured-fabrics></app-featured-fabrics>
-</section>
-<section>
-	<h1>Anfrage</h1>
-</section>
-
-<app-dark-mode-toggle></app-dark-mode-toggle>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
