--- a/frontend/customer/src/app/header/header.scss
+++ b/frontend/customer/src/app/header/header.scss
@@ -31,6 +31,12 @@
 	font-weight: 400;
 	font-size: 32px;
 	color: var(--p-id-500);
+	text-decoration: none;
+	transition: opacity 0.2s ease;
+
+	&:hover {
+		opacity: 0.7;
+	}
 }
 
 @media (max-width: 768px) {
