--- a/frontend/customer/src/app/home/home-page.html
+++ b/frontend/customer/src/app/home/home-page.html
@@ -21,3 +21,35 @@
 <section>
 	<h1>Anfrage</h1>
 </section>
+<section>
+	<h1>Über mich</h1>
+	<div class="about-me">
+		<div class="about-me-text">
+			<p>
+				Hallo, ich bin Jenny, der kreative Kopf hinter Kicherkrabbe. Seit 2015 nähe ich leidenschaftlich gern, doch erst
+				durch meine Schwangerschaft wurde das Nähen zu meinem liebsten Hobby. Während meiner Elternzeit habe ich mich
+				intensiv weitergebildet, um die Qualität meiner Arbeiten kontinuierlich zu verbessern.
+			</p>
+			<p>
+				Anfang 2024 habe ich schließlich den Schritt gewagt und mein Kleingewerbe angemeldet. Unter diesem Namen nähe ich
+				nun verschiedene Kleidung für Babys und Kinder in den <strong>Größen 56 - 116</strong>. Falls deine Wunschgröße,
+				Stoff oder Schnitt nicht dabei ist, schreibe mir gerne und wir finden gemeinsam eine Lösung.
+			</p>
+			<p>
+				Nach langer Suche nach der perfekten Druckerei in <strong>Deutschland</strong> lasse ich meine Motivstoffe auf
+				<strong>Bio-Stoffen</strong> produzieren. Mittlerweile hat sich eine große Auswahl an verschiedenen Designs
+				angesammelt. Schau dich doch gerne <a routerLink="/fabrics">hier</a> um. Bestimmt findest du den perfekten Stoff
+				für dein Unikat.
+			</p>
+			<p>
+				Du findest mich auch auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a> und kannst dir
+				dort meine bisherigen Werke ansehen und mich kontaktieren. Alternativ schreibe mir gerne eine
+				<a href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&#64;kicherkrabbe.com</i> oder nutze das
+				<a routerLink="/contact">Kontaktformular</a>.
+			</p>
+		</div>
+		<div class="about-me-image">
+			<img src="/images/jenny.jpg" width="100%" alt="Jenny" />
+		</div>
+	</div>
+</section>
