--- a/frontend/customer/src/app/home/home-page.scss
+++ b/frontend/customer/src/app/home/home-page.scss
@@ -44,3 +44,40 @@ section {
 		justify-content: center;
 	}
 }
+
+.about-me {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 24px;
+	max-width: 900px;
+	margin: 0 auto;
+
+	.about-me-text {
+		flex: 1 1 auto;
+		line-height: 1.6;
+
+		a {
+			color: inherit;
+		}
+	}
+
+	.about-me-image {
+		flex: 0 0 300px;
+
+		img {
+			border-radius: 12px;
+		}
+	}
+}
+
+@media (max-width: 1000px) {
+	.about-me {
+		flex-direction: column;
+
+		.about-me-image {
+			flex: 0 0 auto;
+			max-width: 300px;
+		}
+	}
+}
