--- a/frontend/customer/src/app/fabrics/fabric-card/fabric-card.html
+++ b/frontend/customer/src/app/fabrics/fabric-card/fabric-card.html
@@ -1,6 +1,6 @@
 <p-card [style]="{ width: '100%', height: '100%', overflow: 'hidden' }">
 	<ng-template #header>
-		<img alt="Stoff" class="fabric-image" [src]="getImageUrl()" />
+		<img alt="Stoff" class="fabric-image" [src]="imageUrl$ | async" />
 	</ng-template>
 	<ng-template #title>
 		{{ fabric.name }}
