--- a/frontend/customer/src/app/patterns/featured-patterns/featured-patterns.html
+++ b/frontend/customer/src/app/patterns/featured-patterns/featured-patterns.html
@@ -1,4 +1,4 @@
-@if (getItems() | async; as items) {
+@if (items$ | async; as items) {
 	@if (items.length > 1) {
 		<p-carousel
 			[value]="items"
