--- a/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
+++ b/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
@@ -1,6 +1,6 @@
 <p-card [style]="{ width: '100%', height: '100%', overflow: 'hidden' }">
 	<ng-template #header>
-		<img alt="Schnittmuster" class="pattern-image" [src]="getImageUrl()" />
+		<img alt="Schnittmuster" class="pattern-image" [src]="imageUrl$ | async" />
 	</ng-template>
 	<ng-template #title>
 		{{ pattern.name }}
