--- a/frontend/customer/src/styles.scss
+++ b/frontend/customer/src/styles.scss
@@ -37,6 +37,8 @@ h1 {
 	font-family: Lexend, sans-serif;
 	font-weight: 200;
 	text-transform: uppercase;
+	overflow-wrap: break-word;
+	hyphens: auto;
 }
 
 @media (max-width: 1024px) {
@@ -47,12 +49,12 @@ h1 {
 
 @media (max-width: 600px) {
 	h1 {
-		font-size: 2.5em;
+		font-size: 3em;
 	}
 }
 
 @media (max-width: 400px) {
 	h1 {
-		font-size: 1.5em;
+		font-size: 2.5em;
 	}
 }
