Bundle management server

--- a/frontend/customer/src/app/header/header.html
+++ b/frontend/customer/src/app/header/header.html
@@ -1,5 +1,5 @@
 <div class="centered">
 	<span class="prefix">Deine Handmade</span>
-	<a class="title" routerLink="/">Kicherkrabbe</a>
+	<a class="title" routerLink="/" autofocus>Kicherkrabbe</a>
 	<span class="suffix">Kinderkleidung</span>
 </div>
