--- a/frontend/customer/src/app/header/header.scss
+++ b/frontend/customer/src/app/header/header.scss
@@ -34,6 +34,10 @@
 	text-decoration: none;
 	transition: opacity 0.2s ease;
 
+	&:focus:not(:focus-visible) {
+		outline: none;
+	}
+
 	&:hover {
 		opacity: 0.7;
 	}
